@@ -4,6 +4,7 @@ X3 C++ PluginFramework
 
     * Add parameter 'enableDelayLoading' in Ix_PluginLoader.
     * Enable multiple hosts of plugin manager in PluginManager.h
+    * Add Cx_ConfigTransaction(Ix_ConfigData* p).
 
 2011-07-14
 
